--- a/sass/partials/variables/_fonts.scss
+++ b/sass/partials/variables/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: futuraBold;
-  src: url(../../../assets/fonts/futura_bold_bt.ttf);
+  src: url(../../../assets/fonts/futura_bold.otf);
 }
 
 @font-face {
   font-family: futuraMedium;
-  src: url(../../../assets/fonts/futura_medium_bt.ttf);
+  src: url(../../../assets/fonts/futura_medium_bt.otf);
 }
 
 @font-face {
