--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -1,14 +1,14 @@
 .tenexform {
-    text-align: center;
-    width: 100%;
-    min-height: 100vh;
-    background-color: $color_login_bg;
+  text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  background-color: $color_login_bg;
   #signInBtn {
     margin-top: 3rem;
   }
   h2 {
-      margin:0;
-      padding-top: 6.25rem;
+    margin: 0;
+    padding-top: 3rem;
   }
   form {
     display: flex;
@@ -18,15 +18,20 @@
     margin-top: 4rem;
     width: 100%;
   }
-  #loginForm input {
-    border-radius: 1.5rem;
-    border: 1px solid $color_input_border;
-    padding: 0.625rem 1.25rem;
-    margin: 0.25rem;
-    width: 343px;
-    box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.16);
+  #loginForm {
+    label {
+      width: calc(100% - 2rem);
+    }
+
+    input {
+      border-radius: 1.5rem;
+      border: 1px solid $color_input_border;
+      padding: 0.625rem 1.25rem;
+      width: 100%;
+      box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.16);
+    }
   }
-  
+
   p:nth-of-type(1) {
     text-align: right;
     margin: 0.5rem 1rem 1rem 1rem;
@@ -36,9 +41,9 @@
     margin-top: 2.5rem;
     margin-bottom: 0.25rem;
   }
-    
+
   p:nth-of-type(3) {
     text-decoration: underline;
     margin-top: 0;
-  }  
+  }
 }
