--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -63,7 +63,7 @@
 .new_req_book_wrapper .new_req_book_card button {
   background: white;
   border: 1px solid lightgray;
-  padding: 1rem;
+  padding: 1rem 0;
   border-radius: 0.5rem;
   color: #4f4f4f;
 
