fix home page conflicts

--- a/style.css
+++ b/style.css
@@ -15,14 +15,12 @@ Table of Contents
 
 */
 /* 1. Variables =========================================================== */
-
 ::-moz-placeholder {
   color: #BDBDBD;
 }
 :-ms-input-placeholder {
   color: #BDBDBD;
 }
-
 ::placeholder {
   color: #BDBDBD;
 }
@@ -140,7 +138,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -322,10 +321,8 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-
 [type=checkbox],
 [type=radio] {
-
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -569,7 +566,6 @@ p {
   letter-spacing: 1px;
   color: SFProDisplayRegular, serif;
 }
-
 .tenexform label input::-moz-placeholder {
   font-family: SFProDisplayLight, serif;
   letter-spacing: 1px;
@@ -578,7 +574,6 @@ p {
   font-family: SFProDisplayLight, serif;
   letter-spacing: 1px;
 }
-
 .tenexform label input::placeholder {
   font-family: SFProDisplayLight, serif;
   letter-spacing: 1px;
@@ -660,7 +655,10 @@ a {
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 /* Position the "next button" to the right and previous button to left*/
@@ -724,7 +722,6 @@ a {
   animation-duration: 1.5s;
 }
 
-
 @-webkit-keyframes fade {
   from {
     opacity: 0.4;
@@ -733,7 +730,6 @@ a {
     opacity: 1;
   }
 }
-
 @keyframes fade {
   from {
     opacity: 0.4;
@@ -811,7 +807,6 @@ a {
 .tenexbox_header,
 .calendar_header,
 .archive_header {
-
   position: sticky;
   top: 0;
   padding: 1rem 0 0.875rem;
@@ -889,6 +884,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -898,6 +894,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -993,6 +990,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -1002,6 +1000,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -1011,6 +1010,8 @@ a {
   margin-top: 0.5rem;
   border-radius: 1rem;
   background-color: rgba(255, 255, 255, 0.3);
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
   max-width: max-content;
 }
 .notifCard_duration_date_wrapper p,
@@ -1027,6 +1028,8 @@ a {
   margin-top: 0.5rem;
   border-radius: 1rem;
   background-color: rgba(189, 189, 189, 0.25);
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
   max-width: max-content;
 }
 .newBookingCard_time_wrapper p {
@@ -1102,6 +1105,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -1111,6 +1115,7 @@ a {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -1307,6 +1312,8 @@ svg {
   align-items: center;
   background-color: #eeeeee;
   padding: 0.25rem 0.5rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 40px;
   margin: 0;
@@ -1457,6 +1464,8 @@ svg {
   align-items: center;
   background-color: #eeeeee;
   padding: 0.25rem 0.5rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 40px;
   margin: 0;
@@ -1487,6 +1496,8 @@ svg {
 }
 
 .illustration {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: auto;
 }
@@ -1590,6 +1601,8 @@ svg {
 }
 
 .newReq_subject_submit {
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   margin-top: 1rem;
 }
@@ -1678,6 +1691,8 @@ svg {
   margin-top: 1rem;
   padding: 0.75rem 1rem;
   opacity: 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   max-width: 70%;
   transition: opacity 0.25s ease-in-out;
@@ -1711,10 +1726,8 @@ svg {
 .message-container .name {
   display: inline-block;
   width: 100%;
-
   color: #3F6E6A;
   font-weight: 600;
-
   box-sizing: border-box;
 }
 
@@ -1726,7 +1739,7 @@ svg {
   z-index: 10;
   display: flex;
   flex-flow: row nowrap;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
 }
 #message-form button {
   flex-grow: 1;
@@ -1918,6 +1931,7 @@ svg {
   display: -webkit-box;
   text-overflow: ellipsis;
   -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   white-space: pre-line;
 }
 
@@ -1927,6 +1941,8 @@ svg {
   margin-top: 0.5rem;
   border-radius: 1rem;
   background-color: rgba(255, 255, 255, 0.3);
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
   max-width: max-content;
 }
 
@@ -2086,7 +2102,6 @@ button:focus {
   top: 0;
   z-index: 100;
   padding: 0;
-
   display: flex;
   flex-direction: column;
   background-color: #f4f4f4;
@@ -2164,23 +2179,9 @@ button:focus {
   margin: auto;
   margin-bottom: 6rem;
 }
-
 .body_FAQs #back_btn {
   border: transparent;
   background-color: transparent;
-
-.body_wrapper_FAQs main div {
-  max-width: 100%;
-  display: block;
-  transform: translateY(-18px);
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  margin-top: 1rem;
-}
-
-.body_wrapper_FAQs .fas {
-  color: gray;
-
 }
 .body_FAQs .accordion {
   cursor: pointer;
@@ -2195,10 +2196,7 @@ button:focus {
   display: grid;
   transition: flex 0.3s ease-out;
 }
-  
 .body_FAQs .accordionTitle {
-  border-radius: .5rem;
-  margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -2211,7 +2209,6 @@ button:focus {
   font-size: 1rem;
   color: #4f4f4f;
 }
-
 .body_FAQs .panel {
   font-family: SFProDisplayRegular;
   font-size: 0.875rem;
@@ -2221,8 +2218,7 @@ button:focus {
   margin-top: 0.5rem;
   margin-bottom: 0;
 }
-
-.first {
+.body_FAQs .first {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -2293,7 +2289,8 @@ button:focus {
 /* 7. Accessibility ======================================================== */
 .visually-hidden {
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   overflow: hidden;
   position: absolute;
@@ -2351,13 +2348,16 @@ button:focus {
   z-index: 100;
   top: 0;
   left: 0;
-  backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
+          backdrop-filter: blur(0.5rem);
   background-color: rgba(0, 0, 0, 0.6);
 }
 
 .new_req_book_card {
   padding: 2rem 1rem;
   height: 13rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   flex-direction: row;
@@ -2405,6 +2405,7 @@ button:focus {
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   max-height: 2.5rem;
   margin: 0;
   color: rgba(0, 0, 0, 0.8);
@@ -2473,6 +2474,8 @@ canvas,
 }
 .camera_feed .clicked_options button,
 .clicked_camera_feed .clicked_options button {
+  width: -webkit-max-content;
+  width: -moz-max-content;
   width: max-content;
 }
 
@@ -2581,7 +2584,6 @@ canvas,
   width: 12rem;
 }
 
-
 .arrow {
   transition: all 0.3s ease;
   transform: rotate(0deg);
@@ -2589,7 +2591,7 @@ canvas,
 
 .rotate {
   transform: rotate(90deg);
-}/*# sourceMappingURL=style.css.map */
+}
 
 .offline_events {
   text-align: center;
@@ -2601,8 +2603,4 @@ canvas,
 
 .slideshow-container {
   display: none;
-}
-
-/* 11. hacks =============================================================== */
-/* 12. Print =============================================================== */
-
+}/*# sourceMappingURL=style.css.map */
