fixed onborading page and offline mode

--- a/sass/partials/_accessibility.scss
+++ b/sass/partials/_accessibility.scss
@@ -12,3 +12,8 @@
     display: none!important;
 }
 
+.alertCard_title.loading {
+    width: 200px;
+    height: 1rem;
+    color: rgba(0, 0, 0, 0.12);
+}
