--- a/style.css
+++ b/style.css
@@ -2453,7 +2453,7 @@ button:focus {
 .body_regulations {
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: white;
   color: #4f4f4f;
   font-family: "roboto", sans-serif;
 }
@@ -2601,6 +2601,10 @@ button:focus {
   transition: -webkit-box-flex 0.3s ease-out;
   transition: flex 0.3s ease-out;
   transition: flex 0.3s ease-out, -webkit-box-flex 0.3s ease-out, -ms-flex 0.3s ease-out;
+  border: 1px solid #E0E0E0;
+  background-color: white;
+  -webkit-box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+          box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
 }
 
 .body_FAQs .accordionTitle {
@@ -2925,6 +2929,12 @@ canvas,
 #attachments_list li {
   border: 0.5rem solid lightgray;
   border-radius: 0.5rem;
+}
+
+video {
+  width: 100%;
+  height: 70%;
+  background: black;
 }
 
 .camera_feed,
